fixed font not showing the first time

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'KnightsQuest';
+    src: url('KnightsQuest.ttf');
+}​
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -7,11 +12,11 @@ a {
   color: #00B7FF;
 }
 
+h1 {
+    font-family: "KnightsQuest";
+}
+
 .hidden {
     display:none;
 }
 
-@font-face {
-    font-family: 'KnightsQuest';
-    src: url('KnightsQuest.ttf');
-}​
